<resources>
    <string name="app_name">Parstagram</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="bottom_navigation_home">Home</string>
    <string name="bottom_navigation_new_post">New Post</string>
    <string name="captionEditText_hint">Write a caption...</string>
    <string name="shareButton_text">Share</string>
    <string name="bottom_navigation_user">User</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="prompt_username">Username</string>
</resources>