<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeMenuItem"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_home"
        android:title="@string/bottom_navigation_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/newPostMenuItem"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_new_post"
        android:title="@string/bottom_navigation_new_post"
        app:showAsAction="always" />
    <item
        android:id="@+id/userMenuItem"
        android:enabled="true"
        android:icon="@drawable/bottom_nav_user"
        android:title="@string/bottom_navigation_user"
        app:showAsAction="always" />
</menu>